app/scss/components/main/instagram-section.scss
.instagram-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;

  @include small {
    display: block;
    overflow: hidden;
  }


  &__header {
    max-width: 1044px;
    margin-bottom: 32px;
  }

  &__appeal {
    font-family: var(--f-extra);
    font-size: var(--fs-31);
    text-transform: uppercase;
    padding-bottom: 8px;
  }

  &__carousel {
    margin-bottom: 32px;
  }

  & .slide {
    margin-bottom: 0;
  }
}

